--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* DEVELOPER: Carlos Barrientos, IS117-xxx, Fall 2025 */
+/* DEVELOPER: Carlos Barrientos, IS117-001, Fall 2025 */
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
